***********************************
CHANGES IN VERSION 2.7.7

NEW FEATURES

   o Pull request from J. Brayet for installation process

***********************************
CHANGES IN VERSION 2.7.6

NEW FEATURES

   o New utils : hicpro2juicebox. HiC-Pro results can now be converted in Juicebox input for visualization (A. Barrera, N. Servant)

   o New utils : make_viewpoints.py. Allow to generate viewpoint from the list of valid interaction products. Initially developed for capture-C analysis

SIGNIFICANT USER-VISIBLE CHANGES

   o validPairs output format was updated for Juicebox compatibility. New columns were added with restriction fragment names and mapping quality

BUG FIXES

   o Fix bug in hic_inc.sh for numeric comparison

   o Fix bug in bam/sam extension removal

***********************************
CHANGES IN VERSION 2.7.4

NEW FEATURES

    o Support for LSF scheduler thanks to J. Phlipps-Cremins

SIGNIFICANT USER-VISIBLE CHANGES

    o Update singleton reporting in pairing mode (pull request N. Varoquaux, F. Ay)

    o Additional checks on input files to report more "user-friendly" errors

BUG FIXES

    o Fix bugs in singleton and multiple hits reporting

    o Fix bug when fastq.gz files are processed without parallel mode but using a cluster

***********************************
CHANGES IN VERSION 2.7.3b

BUG FIXES

   o Bug fixed if space in the configuration file

   o Bug fixed in plot_pairing_portion.R (pull request M. Blum)

   o Update samtools sort for compatibility with version >1.1

SIGNIFICANT USER-VISIBLE CHANGES

   o Update python access in utils (pull request D. Vanichkina)

   o Update iced version (0.2.1 official release)

***********************************
CHANGES IN VERSION 2.7.2b

NEW FEATURES

   o HiC-Pro is now compatible with the HiCPlotter viewer (see https://github.com/kcakdemir/HiCPlotter)

   o Add support for the SLURM scheduler thanks to A. D'Ippolito !

   o Add support for the SGE scheduler thanks to G. Li !
